--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Dutu
+<h1>Dutu</h1>
 
 Dutu is a small Dependency Injection container for PHP 5.3.0 that consists of one file and one class consisting of 
